hphp/hack/test/ifc/unknown_syntax/basic.php.exp
=== IFC analysis results for basic.php
File "basic.php", line 5, characters 7-15:
Unable to analyze information flow for expression. This might be unsafe. (Typing[4385])
File "basic.php", line 13, characters 3-66:
Unable to analyze information flow for statement. This might be unsafe. (Typing[4385])
File "basic.php", line 19, characters 3-12:
Unable to analyze information flow for local $x missing from env. This might be unsafe. (Typing[4385])
